@@ -14,20 +14,20 @@ Evalf(fun, data = newdata, newdata)
 %- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{fun}{
-%%     ~~Describe \code{fun} here~~
+A function, taking arguments as in a given row of \code{data}
 }
   \item{data}{
-%%     ~~Describe \code{data} here~~
+A data frame
 }
   \item{newdata}{
-%%     ~~Describe \code{newdata} here~~
+Not presently used
 }
 }
-\details{
+%\details{
 %%  ~~ If necessary, more details than the description above ~~
-}
+%}
 \value{
-%%  ~Describe the value returned
+Retuns a list of the function evaluations for each row of \code{data}
 %%  If it is a LIST, use
 %%  \item{comp1 }{Description of 'comp1'}
 %%  \item{comp2 }{Description of 'comp2'}
@@ -45,9 +45,9 @@ Georges Monette
 
 %% ~Make other sections like Warning with \section{Warning }{....} ~
 
-\seealso{
+%\seealso{
 %% ~~objects to See Also as \code{\link{help}}, ~~~
-}
+%}
 \examples{
 ##---- Should be DIRECTLY executable !! ----
 ##-- ==>  Define data, use random,
