@@ -103,6 +103,7 @@ Georges Monette
 
 }
 \examples{
+# None yet
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
