@@ -8,6 +8,7 @@ Version 0.02-3 (10-28-2011) (MF)
 	o merged Text3d.*.Rd files, deleting the separate method files
 	o copied coffee.rda and coffee.Rd from spida to allow wider examples without requiring spida package
 	o merged center.Rd and center.ell.Rd
+	o Fixed arguments of uv.default and uv.ell and documentation as S3 methods
 
 Version 0.02-2 (05-27-2011) (MF)
 	o Added missing ellipsoid function
